# ohcrn_lei

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
eval/: compare_json.py  evaluation.sh  merge.R  visualize.R
src/ohcrn_lei/: __init__.py  cli.py  extractHGNCSymbols.py  llm_calls.py  main.py  pdf_to_text.py  regex_utils.py  task.py  task_parser.py  trieSearch.py
src/ohcrn_lei/data/: hgncTrie.txt  molecular_test_task.txt  variant_task.txt
tests/: test_regex_utils.py  test_task.py  test_task_parser.py  test_trie.py
tests/ohcrn_lei/: __init__.py  test_cli.py  test_extractHGNCSymbols.py  test_pdf_to_text.py  test_task.py  test_trie.py
