[project]
name = "ohcrn-lei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jochen Weile", email = "jweile@oicr.on.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "easyocr==1.7.1",
    "mavehgvs==0.6.1",
    "openai==1.55.3",
    "pymupdf==1.24.4",
    "python-dotenv==0.21.0",
    "requests>=2.32.3",
]

[project.scripts]
ohcrn-lei = "ohcrn_lei:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
