[project]
name = "ohcrn-lei"
version = "0.2.0"
description = "The ohcrn-lei tool takes a PDF or TXT file of a clinical report and extracts desired information from it, which will be output in json format."
readme = "README.md"
authors = [
    { name = "Jochen Weile", email = "jweile@oicr.on.ca" },
    { name = "Andres Melani de la Hoz", email = "amelanidelahoz@oicr.on.ca" }
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "easyocr==1.7.1",
    "mavehgvs==0.6.1",
    "openai==1.55.3",
    "pdf2image>=1.17.0",
    "python-dotenv==0.21.0",
    "requests>=2.32.3",
]

[project.scripts]
ohcrn-lei = "ohcrn_lei:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
indent-width = 2

[tool.pytest.ini_options]
pythonpath = ["ohcrn_lei"]
